# noakweather-engineering-pipeline

./: .env_template  .gitignore  CHANGELOG.md  LICENSE  README.md  pom.xml  pyproject.toml  weth.sh  wethb.sh  wetht.sh
.github/workflows/: maven.yml  sonarcloud.yml
data/: cities.csv
data/output/: current_weather_Jackson_MS_US_20250304155134.json  forecast_Jackson_MS_US_20250304155134.json
data/output/backup/: current_weather_Alexandria_LA_US_20250304132138.json  current_weather_Atlanta_GA_US_20250303203402.json  current_weather_Boyce_LA_US_20250304124040.json  current_weather_Leesville_LA_US_20250304115744.json  current_weather_Monroe_LA_US_20250304124108.json  current_weather_Simpson_LA_US_20250304123521.json  forecast_Alexandria_LA_US_20250304132138.json  forecast_Atlanta_GA_US_20250303203402.json  (+4 more)
docs/: AWS_IAM_DYNAMODB_SETUP.md  CODE_STANDARDS.md  LOGGING_SETUP.md  PHASE_4_GSI_DEPLOYMENT_GUIDE.md  WEATHER_FORMAT_REFERENCES.md
noakweather-legacy/: pom.xml
noakweather-platform/: pom.xml
noakweather-platform/weather-analytics/: pom.xml
noakweather-platform/weather-common/: pom.xml
noakweather-platform/weather-infrastructure/: pom.xml
noakweather-platform/weather-ingestion/: pom.xml
noakweather-platform/weather-processing/: pom.xml
noakweather-platform/weather-storage/: pom.xml
openweathermap/: current_weather_processor.py  fetch_weather_data.py  forecast_processor.py  print_processor.py  weather_processor.py
openweathermap/datasets/: current_weather.py  forecast.py  shared.py  weather.py
utils/: project_patterns.py  property_conversions.py
(+223 files in other folders)
